# mlops-course-python-best-practice

./: .pre-commit-config.yaml  pyproject.toml
src/: main.py
tests/: test_main.py
